html overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,7 @@
 }
 
 /* Page Level */
-html,
+// html,
 body {
   margin: 0;
   overflow: hidden;
